--- a/src/components/section/section.component.scss
+++ b/src/components/section/section.component.scss
@@ -1,4 +1,4 @@
 .section{
-    min-height:var(--bw-section-width)!important;
+    min-height:var(--bw-section-height)!important;
     font-family: var(--bw-font-family-primary);
 }
