--- a/src/styles/components/section.scss
+++ b/src/styles/components/section.scss
@@ -1,4 +1,4 @@
 :root{
-    --bw-section-width: 100vh; 
+    --bw-section-height: 100vh; 
 
 }
